-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
Windows 7, msvc 2010
-
e1e9295926bbf170d40a83246abe8b94d4a3b660,8c6c76b77e627386a29829c3130ba2fec52c733b
Windows: QOpenGL autotest fails:
FAIL! : tst_QOpenGL::sharedResourceCleanup() Compared values are not the same Actual (tracker.invalidateResourceCalls): 1 Expected (0): 0 .\tst_qopengl.cpp(162) : failure location
Remember to enable the test in CI after it has been fixed.
- is required for
-
QTBUG-24203 Qt 5.0 - Windows: Fix tests
-
- Closed
-
For Gerrit Dashboard: QTBUG-24192 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
24849,1 | Fix the tst_QOpenGL::sharedResourceCleanup() test case in Windows | master | qt/qtbase | Status: MERGED | +2 | 0 |
24987,1 | Skip tst_QOpenGL::openGLPaintDevice() if wrong openGL version. | master | qt/qtbase | Status: MERGED | +2 | 0 |