Fix the tst_QOpenGL::sharedResourceCleanup() test case in Windows

QWindowsGLContext was returning always false for isSharing() query,
as it was falling back to default implementation.

Task-number: QTBUG-24192
Change-Id: I884d559d69545ef85a0d07d7287bc50ce459c1bd
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>